# MySunRemote

./: CMakeLists.txt  CMakeLists.txt.txt  build-windows.yml  build-windows.yml.yaml
.github/workflows/: main.yml
server/: serverserver.py.py
src/: inputcontrol.cpp.cpp  inputcontrol.h.cpp  main.cpp.cpp  mainwindow.cpp.cpp  mainwindow.h.cpp  screencapture.cpp.cpp  screencapture.h.cpp  webrtcmanager.cpp.cpp  webrtcmanager.h.cpp
